[metadata]
name = django-emaildeliverability
version = 0.1
description = A Django app to ensure that emails reach their intended destination.
long_description = file: README.rst
url = https://github.com/tamoeinnovation/django-emaildeliverability
author = Tamoe Innovation
author_email = info@tamoe.es
license = GPL-3.0 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 4.2  
    imap-tools == 1.4.0
    loguru == 0.7.2
