[metadata]
name = django-emaildeliverability
version = 0.3.5
description = A Django app to ensure that emails reach their intended destination
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/tamoeinnovation/django-emaildeliverability
author = Tamoe Innovation
author_email = info@tamoe.es
license = GPL-3.0 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires = 
    Django >= 3.2  
    imap-tools == 1.4.0
    loguru == 0.7.2
